// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Issues -> Merged View renders initially with loading component 1`] = `
<div>
  <div
    className="alert alert-block alert-warning"
  >
    <strong>
      Warning
      :
    </strong>
     
    This is an experimental feature. Data may not be immediately available while we process unmerges.
  </div>
  <LoadingIndicator />
</div>
`;

exports[`Issues -> Merged View renders with mocked data 1`] = `
<GroupMergedView
  location={
    Object {
      "query": Object {},
    }
  }
  params={
    Object {
      "groupId": "groupId",
      "orgId": "orgId",
      "projectId": "projectId",
    }
  }
>
  <div>
    <div
      className="alert alert-block alert-warning"
    >
      <strong>
        Warning
        :
      </strong>
       
      This is an experimental feature. Data may not be immediately available while we process unmerges.
    </div>
    <LoadingIndicator>
      <div
        className="loading"
      >
        <div
          className="loading-indicator"
        />
        <div
          className="loading-message"
        />
      </div>
    </LoadingIndicator>
  </div>
</GroupMergedView>
`;

exports[`Issues -> Merged View renders with mocked data 2`] = `
<GroupMergedView
  location={
    Object {
      "query": Object {},
    }
  }
  params={
    Object {
      "groupId": "groupId",
      "orgId": "orgId",
      "projectId": "projectId",
    }
  }
>
  <div>
    <div
      className="alert alert-block alert-warning"
    >
      <strong>
        Warning
        :
      </strong>
       
      This is an experimental feature. Data may not be immediately available while we process unmerges.
    </div>
    <LoadingIndicator>
      <div
        className="loading"
      >
        <div
          className="loading-indicator"
        />
        <div
          className="loading-message"
        />
      </div>
    </LoadingIndicator>
  </div>
</GroupMergedView>
`;
